--- a/part-2/app/users.component.html
+++ b/part-2/app/users.component.html
@@ -1,5 +1,5 @@
 <h1>Users</h1>
-<p><a class="btn btn-primary" href="/users/new">Add User</a></p>
+<p><a class="btn btn-primary" [routerLink]="['UserForm']">Add User</a></p>
 <span *ngIf="isLoading">Loading...</span>
 <table class="table table-bordered" *ngIf="!isLoading">
   <tr>
