--- a/part-2/app/user-form.component.html
+++ b/part-2/app/user-form.component.html
@@ -1,43 +1,46 @@
-<div class="col-md-6 well">
-  <form [ngFormModel]="form" (ngSubmit)="save()">
-    <fieldset>
-      <legend>User</legend>
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input ngControl="name" id="name" type="text" class="form-control" #name="ngForm">
-      </div>
-      <div *ngIf="name.touched && !name.valid" class="alert alert-danger">
-        Name is required.
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input ngControl="email" id="email" type="text" class="form-control" #email="ngForm">
-      </div>
-      <div *ngIf="email.touched && !email.valid" class="alert alert-danger">
-        Please type a valid email.
-      </div>
-      <div class="form-group">
-        <label for="phone">Phone</label>
-        <input ngControl="phone" id="phone" type="text" class="form-control" #phone="ngForm">
-      </div>
-    </fieldset>
+<h1>{{ title }}</h1>
+<div class="row">
+  <div class="col-md-6 well">
+    <form [ngFormModel]="form" (ngSubmit)="save()">
+      <fieldset>
+        <legend>User</legend>
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input [(ngModel)]="user.name" ngControl="name" id="name" type="text" class="form-control" #name="ngForm">
+        </div>
+        <div *ngIf="name.touched && !name.valid" class="alert alert-danger">
+          Name is required.
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input [(ngModel)]="user.email" ngControl="email" id="email" type="text" class="form-control" #email="ngForm">
+        </div>
+        <div *ngIf="email.touched && !email.valid" class="alert alert-danger">
+          Please type a valid email.
+        </div>
+        <div class="form-group">
+          <label for="phone">Phone</label>
+          <input [(ngModel)]="user.phone" ngControl="phone" id="phone" type="text" class="form-control" #phone="ngForm">
+        </div>
+      </fieldset>
 
-    <fieldset ngControlGroup="address">
-      <legend>Address</legend>
-      <div class="form-group">
-        <label for="street">Street</label><input ngControl="street" id="street" type="text" class="form-control" #street="ngForm">
-      </div>
-      <div class="form-group">
-        <label for="suite">Suite</label><input ngControl="suite" id="suite" type="text" class="form-control" #suite="ngForm">
-      </div>
-      <div class="form-group">
-        <label for="city">City</label><input ngControl="city" id="city" type="text" class="form-control" #city="ngForm">
-      </div>
-      <div class="form-group">
-        <label for="zipcode">Zip Code</label><input ngControl="zipcode" id="zipcode" type="text" class="form-control" #zipcode="ngForm">
-      </div>
-    </fieldset>
+      <fieldset ngControlGroup="address">
+        <legend>Address</legend>
+        <div class="form-group">
+          <label for="street">Street</label><input [(ngModel)]="user.address.street" ngControl="street" id="street" type="text" class="form-control" #street="ngForm">
+        </div>
+        <div class="form-group">
+          <label for="suite">Suite</label><input ngControl="suite" id="suite" type="text" class="form-control" #suite="ngForm">
+        </div>
+        <div class="form-group">
+          <label for="city">City</label><input ngControl="city" id="city" type="text" class="form-control" #city="ngForm">
+        </div>
+        <div class="form-group">
+          <label for="zipcode">Zip Code</label><input ngControl="zipcode" id="zipcode" type="text" class="form-control" #zipcode="ngForm">
+        </div>
+      </fieldset>
 
-    <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Save</button>
-  </form>
+      <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Save</button>
+    </form>
+  </div>
 </div>
