--- a/part-2/app/users.component.html
+++ b/part-2/app/users.component.html
@@ -11,7 +11,11 @@
   <tr *ngFor="#user of users">
     <td>{{ user.name }}</td>
     <td>{{ user.email }}</td>
-    <td><i class="glyphicon glyphicon-edit"></i></td>
+    <td>
+      <a [routerLink]="['EditForm', {id: user.id}]">
+        <i class="glyphicon glyphicon-edit"></i>
+      </a>
+    </td>
     <td><i class="glyphicon glyphicon-remove"></i></td>
   </tr>
 </table>
