--- a/part-2/app/users.component.html
+++ b/part-2/app/users.component.html
@@ -16,6 +16,8 @@
         <i class="glyphicon glyphicon-edit"></i>
       </a>
     </td>
-    <td><i class="glyphicon glyphicon-remove"></i></td>
+    <td>
+      <i (click)="deleteUser(user)" class="glyphicon glyphicon-remove clickable"></i>
+    </td>
   </tr>
 </table>
