--- a/part-2/app/posts/posts.component.html
+++ b/part-2/app/posts/posts.component.html
@@ -3,14 +3,14 @@
   <div class="col-sm-6">
     <select #u class="form-control" (change)="reloadPosts({ userId: u.value })">
       <option value="">Select a user...</option>
-      <option *ngFor="#user of users" value="{{ user.id }}">
+      <option *ngFor="let user of users" value="{{ user.id }}">
         {{ user.name }}
       </option>
     </select>
     <spinner [visible]="postsLoading"></spinner>
     <pagination [items]="posts" (page-changed)="onPageChanged($event)"></pagination>
     <ul *ngIf="!postsLoading" class="list-group posts">
-      <li class="list-group-item" *ngFor="#post of pagedPosts" (click)="displayPost(post)" [class.active]="currentPost == post">
+      <li class="list-group-item" *ngFor="let post of pagedPosts" (click)="displayPost(post)" [class.active]="currentPost == post">
         {{ post.title }}
       </li>
     </ul>
@@ -24,7 +24,7 @@
         <p>{{ currentPost.body }}</p>
         <hr/>
         <spinner [visible]="commentsLoading"></spinner>
-        <div class="media" *ngFor="#comment of currentPost.comments">
+        <div class="media" *ngFor="let comment of currentPost.comments">
           <div class="media-left">
             <a href="#">
               <img class="media-object thumbnail" src="http://lorempixel.com/80/80/people?random={{ comment.id }}" alt="...">
