--- a/part-2/app/users/users.component.html
+++ b/part-2/app/users/users.component.html
@@ -8,7 +8,7 @@
     <th>Edit</th>
     <th>Delete</th>
   </tr>
-  <tr *ngFor="#user of users">
+  <tr *ngFor="let user of users">
     <td>{{ user.name }}</td>
     <td>{{ user.email }}</td>
     <td>
